tests/fixtures/invalid/pow_str_dict_float.py
# Cannot call pow() with Str, Dict[str, int], Float
x = pow("hello", {"a": 1}, 1.0)
